{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 25,
  "lineage": "335e3a04-2609-e7b6-0dba-554f5e9eff6a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397972657:network-acl/acl-0ee0edb4be6599d94",
            "default_network_acl_id": "acl-0ee0edb4be6599d94",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0ee0edb4be6599d94",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "767397972657",
            "subnet_ids": [
              "subnet-0048d0a7b24e300cc",
              "subnet-00d5955001d2022ef",
              "subnet-0363cf9f8980cdc5f",
              "subnet-03f453fe074c61afa",
              "subnet-05881cb04f622ccab",
              "subnet-06818e50ee500e944",
              "subnet-06f9c543e544fbac0",
              "subnet-0761ea859f1e872e3",
              "subnet-08c25019a9880411e",
              "subnet-09631c8374b6b7e66",
              "subnet-0a408d060fd993f3b",
              "subnet-0bebd39c7dd0908d8",
              "subnet-0e8d3318481127905",
              "subnet-0efe965ca45b49e1b",
              "subnet-0f0f03c27d7d448f0",
              "subnet-0fb38a64123884b84"
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0cc842eb7046069b9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397972657:internet-gateway/igw-0f1b451e552d9b36a",
            "id": "igw-0f1b451e552d9b36a",
            "owner_id": "767397972657",
            "tags": {
              "Name": "FFW-internet-gateway"
            },
            "tags_all": {
              "Name": "FFW-internet-gateway"
            },
            "vpc_id": "vpc-0cc842eb7046069b9"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "igw-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397972657:route-table/rtb-039d9fab1e3d10806",
            "id": "rtb-039d9fab1e3d10806",
            "owner_id": "767397972657",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f1b451e552d9b36a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "igw-route"
            },
            "tags_all": {
              "Name": "igw-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cc842eb7046069b9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-igw-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0537b4898db92f033",
            "route_table_id": "rtb-039d9fab1e3d10806",
            "subnet_id": "subnet-0fb38a64123884b84"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.igw-route",
            "aws_subnet.public-subnet",
            "aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c30fb2f47436ed88",
            "route_table_id": "rtb-039d9fab1e3d10806",
            "subnet_id": "subnet-03f453fe074c61afa"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.igw-route",
            "aws_subnet.public-subnet",
            "aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e8014d3761a4b9a6",
            "route_table_id": "rtb-039d9fab1e3d10806",
            "subnet_id": "subnet-0761ea859f1e872e3"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.igw-route",
            "aws_subnet.public-subnet",
            "aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0982d70d0a5d89d74",
            "route_table_id": "rtb-039d9fab1e3d10806",
            "subnet_id": "subnet-0f0f03c27d7d448f0"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.igw-route",
            "aws_subnet.public-subnet",
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397972657:subnet/subnet-0bebd39c7dd0908d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.16.16.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bebd39c7dd0908d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397972657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FFW-db-subnet 1"
            },
            "tags_all": {
              "Name": "FFW-db-subnet 1"
            },
            "vpc_id": "vpc-0cc842eb7046069b9"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397972657:subnet/subnet-0a408d060fd993f3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.32.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a408d060fd993f3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397972657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FFW-db-subnet 2"
            },
            "tags_all": {
              "Name": "FFW-db-subnet 2"
            },
            "vpc_id": "vpc-0cc842eb7046069b9"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397972657:subnet/subnet-0048d0a7b24e300cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.16.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0048d0a7b24e300cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397972657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FFW-db-subnet 3"
            },
            "tags_all": {
              "Name": "FFW-db-subnet 3"
            },
            "vpc_id": "vpc-0cc842eb7046069b9"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397972657:subnet/subnet-0efe965ca45b49e1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.64.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efe965ca45b49e1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397972657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FFW-db-subnet 4"
            },
            "tags_all": {
              "Name": "FFW-db-subnet 4"
            },
            "vpc_id": "vpc-0cc842eb7046069b9"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intranet-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397972657:subnet/subnet-06818e50ee500e944",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.16.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06818e50ee500e944",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397972657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FFW-intranet-subnet 1"
            },
            "tags_all": {
              "Name": "FFW-intranet-subnet 1"
            },
            "vpc_id": "vpc-0cc842eb7046069b9"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397972657:subnet/subnet-05881cb04f622ccab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05881cb04f622ccab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397972657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FFW-intranet-subnet 2"
            },
            "tags_all": {
              "Name": "FFW-intranet-subnet 2"
            },
            "vpc_id": "vpc-0cc842eb7046069b9"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397972657:subnet/subnet-08c25019a9880411e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.16.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08c25019a9880411e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397972657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FFW-intranet-subnet 3"
            },
            "tags_all": {
              "Name": "FFW-intranet-subnet 3"
            },
            "vpc_id": "vpc-0cc842eb7046069b9"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397972657:subnet/subnet-0e8d3318481127905",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.30.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e8d3318481127905",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397972657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FFW-intranet-subnet 4"
            },
            "tags_all": {
              "Name": "FFW-intranet-subnet 4"
            },
            "vpc_id": "vpc-0cc842eb7046069b9"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397972657:subnet/subnet-0363cf9f8980cdc5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0363cf9f8980cdc5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397972657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FFW-private-subnet 1"
            },
            "tags_all": {
              "Name": "FFW-private-subnet 1"
            },
            "vpc_id": "vpc-0cc842eb7046069b9"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397972657:subnet/subnet-09631c8374b6b7e66",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09631c8374b6b7e66",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397972657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FFW-private-subnet 2"
            },
            "tags_all": {
              "Name": "FFW-private-subnet 2"
            },
            "vpc_id": "vpc-0cc842eb7046069b9"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397972657:subnet/subnet-00d5955001d2022ef",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.16.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d5955001d2022ef",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397972657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FFW-private-subnet 3"
            },
            "tags_all": {
              "Name": "FFW-private-subnet 3"
            },
            "vpc_id": "vpc-0cc842eb7046069b9"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397972657:subnet/subnet-06f9c543e544fbac0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.7.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06f9c543e544fbac0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397972657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FFW-private-subnet 4"
            },
            "tags_all": {
              "Name": "FFW-private-subnet 4"
            },
            "vpc_id": "vpc-0cc842eb7046069b9"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397972657:subnet/subnet-0fb38a64123884b84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb38a64123884b84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397972657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FFW-public-subnet 1"
            },
            "tags_all": {
              "Name": "FFW-public-subnet 1"
            },
            "vpc_id": "vpc-0cc842eb7046069b9"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397972657:subnet/subnet-03f453fe074c61afa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f453fe074c61afa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397972657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FFW-public-subnet 2"
            },
            "tags_all": {
              "Name": "FFW-public-subnet 2"
            },
            "vpc_id": "vpc-0cc842eb7046069b9"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397972657:subnet/subnet-0761ea859f1e872e3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.16.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0761ea859f1e872e3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397972657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FFW-public-subnet 3"
            },
            "tags_all": {
              "Name": "FFW-public-subnet 3"
            },
            "vpc_id": "vpc-0cc842eb7046069b9"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397972657:subnet/subnet-0f0f03c27d7d448f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.16.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0f03c27d7d448f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397972657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FFW-public-subnet 4"
            },
            "tags_all": {
              "Name": "FFW-public-subnet 4"
            },
            "vpc_id": "vpc-0cc842eb7046069b9"
          },
          "dependencies": [
            "aws_vpc.mainvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "mainvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:767397972657:vpc/vpc-0cc842eb7046069b9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0ee0edb4be6599d94",
            "default_route_table_id": "rtb-050e2eb4f3647fd63",
            "default_security_group_id": "sg-09c36173cd8e4575b",
            "dhcp_options_id": "dopt-009c1177186ab0b0c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cc842eb7046069b9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-050e2eb4f3647fd63",
            "owner_id": "767397972657",
            "tags": {
              "Name": "FFW-VPC"
            },
            "tags_all": {
              "Name": "FFW-VPC"
            }
          }
        }
      ]
    }
  ]
}